syntax = "proto3";

option java_multiple_files = true;
option java_package = "edgekv.frontend";
option java_outer_classname = "FrontendProto";

package frontend;

service Frontend {
    rpc Get(GetRequest) returns (GetResponse) {}

    rpc Put(PutRequest) returns (PutResponse) {}

    rpc Del(DeleteRequest) returns (DeleteResponse) {}
}

message GetRequest {
    string key = 1;
    bool type = 2;
}

message GetResponse {
    string data = 1;
    int32 size = 2;
}

message PutRequest {
    string key = 1;
    string value = 2;
    bool type = 3;
}

message PutResponse {
    int32 status = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    int32 status = 1;
}